[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
files = "src"

[[tool.mypy.overrides]]
module = [
    "bokeh.embed",
    "bokeh.resources",
    "IPython.display",
    "myst_nb.nodes",
    "myst_nb.render_outputs",
    "myst_nb.nb_glue",
    "docutils.nodes",
    "nbformat",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "sphinx_params",
]
filterwarnings = [
    "ignore:'environmentfilter' is renamed",
    "ignore:'contextfilter' is renamed",
    "ignore:'contextfunction' is renamed",
]
