[metadata]
name = myst-nb-bokeh
version = attr: myst_nb_bokeh.__version__
description = MyST-NB-Bokeh includes functions for gluing and pasting Bokeh figures in MyST documents.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bryanwweber/myst-nb-bokeh
author = Bryan Weber
author_email = bryan.w.weber@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords =
    docutils
    sphinx
    bokeh
project_urls =
    Documentation = https://myst-nb-bokeh.readthedocs.io/en/latest/
    Source = https://github.com/bryanwweber/myst-nb-bokeh
    Tracker = https://github.com/bryanwweber/myst-nb-bokeh/issues

[options]
package_dir =
    =src
packages = find:
install_requires =
    myst-nb>=0.13.2,<0.14
    bokeh~=2.4.0
    IPython>=7.0
    sphinx>=3.5,<5
python_requires = >=3.7
include_package_data = True
zip_safe = True

[options.packages.find]
exclude =
    test*
where = src

[options.entry_points]
myst_nb.mime_render =
    bokeh = myst_nb_bokeh:BokehOutputRenderer

[options.extras_require]
code_style =
    pre-commit
testing =
    pytest
    pytest-cov
    pytest-regressions
    lxml
docs =
    sphinx>=3.5,<5
    sphinx-book-theme

[flake8]
max-line-length = 100
extend-ignore = E203,D107
exclude = docs
